force-app/main/default/objects/Rooms__c/Rooms__c.object-meta.xml
<CustomObject>
    <label>Room</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Rooms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>