force-app/main/default/objects/Rooms__c/fields/KSA_Quote__c.field-meta.xml
<CustomField>
    <fullName>KSA_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KSA Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>