force-app/main/default/objects/Rooms__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <label>Room No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>