force-app/main/default/objects/Rooms__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Single</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Double</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Triple</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Quad</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Six</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>