force-app/main/default/objects/Rooms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Room_No__c</columns>
    <columns>KSA_Quote__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>